# eight_point_estimator

./: .gitmodules  CMakeLists.txt  EightPointEstimator.cpp  EightPointEstimator.h
tests/: CMakeLists.txt  EstimatorFixture.cpp  EstimatorFixture.h  checkEstimator.cpp  visualizePoses.cpp
